--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ name = "pypi"
 pytz = "==2017.3"
 Django = "==2.0"
 dateparser = "==0.6.0"
+django_filter = "==1.1.0"
 django-filters = "==0.2.1"
 lxml = "==4.1.1"
 djangorestframework = "==3.7.3"
