--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ django_filter = "==1.1.0"
 django-filters = "==0.2.1"
 lxml = "==4.1.1"
 djangorestframework = "==3.7.3"
-
+psycopg2 = "==2.7.3.2"
 
 [dev-packages]
 
