--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-filters = "==0.2.1"
 lxml = "==4.1.1"
 djangorestframework = "==3.7.3"
 psycopg2 = "==2.7.3.2"
+dj-database-url = "==0.4.2"
 
 [dev-packages]
 
