--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ lxml = "==4.1.1"
 djangorestframework = "==3.7.3"
 psycopg2 = "==2.7.3.2"
 dj-database-url = "==0.4.2"
+parameterized = "==0.6.1"
 
 [dev-packages]
 
