--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: python
 python:
 - '3.6'
+services:
+  - postgresql
+before_script:
+  - psql -c 'CREATE USER weather WITH PASSWORD \'weather\';' -U postgres
+  - psql -c 'ALTER USER weather CREATEDB;' -U postgres
 install:
 - pip install -r requirements.txt
 script:
